css/styles-sm.css
/* ====================== Restaurant Details ====================== */
#breadcrumb {
    width: 100%;
}

.inside #map-container {
      display: none;
  }

.inside #footer {
      display: none;
  }

  #restaurant-container, #reviews-container {
      width: 100%;
  }

  #restaurant-container {
      text-align: center;
  }

  #restaurant-hours {
      margin: 0 auto;
  }

  #restaurant-cuisine, #restaurant-address {
      text-align: center;
  }
  
  #restaurant-cuisine {
      margin: 0 auto;
  }

  #reviews-list li {
      width: 100%;
  }

  #reviews-list li p {
    margin: 0 0 10px;
    font-size: 1.15rem;
  }

